[package]
name = "ex0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bit-set = "0.5.3"
flume = "0.10.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thread_local = "1.1.7"
tokio = { version = "1.25.0", features = ["io-std", "io-util", "net", "full", "sync"] }
